kubernetes/app_conhecimentoti/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: app-conhecimentoti-padua 
  
spec:
  replicas: 1

  selector:
    matchLabels:
      app: app-conhecimentoti-padua

  template:
    metadata:
      labels:
        app: app-conhecimentoti-padua
    spec:
        
      containers:
      - name: app-conhecimentoti-padua
        image: iffpadua/conhecimentoti:v1.0.0.padua.v12

        resources:
          limits:
            memory: "200Mi"
            cpu: "100m"
         
          requests:
            memory: "50Mi"
            cpu: "100m"
        
        ports:
        - containerPort: 80
          name: http
        
        
      #https://kubedev.club.hotmart.com/lesson/2OM63PnY46/node-selector
      nodeSelector:
        campus: Padua
